# StanokControl

./: .env  .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
scripts/: bootstrap.py  init_dirs.py
src/bot/: loader.py
src/config/: config.py
src/database/models/: __init__.py  action_log.py  equipment.py  maintenance.py  notification.py  role.py  user.py
src/utils/: logger.py
tests/: test_bootstrap.py  test_config.py  test_db.py  test_logger.py
