[project]
name = "stanok-control"
version = "0.1.0"
description = "Will"
requires-python = ">="
authors = [{name = "NoLogs99"}]

dependencies = [
    "pathlib >=1.0.1",
    "dotenv >=0.9.9",
    "python-dotenv >=1.2.1",
    "loguru >=0.7.3",
    "pytest >=8.4.2",
    "pytest-cov >=7.0.0",
    "sentry-sdk >=2.53.0",
    "asyncio >=4.0.0",
    "mashumaro >=3.20",
    "asyncpg >=0.31.0",
    "tortoise-orm[asyncpg] >=1.1.5",
    "tqdm >=4.67.1",
    "rich >=14.3.3",
    "poetry >=2.3.2",
    "pyfiglet >=1.0.4",
    "fastapi >=0.95.2",
    "SQLAlchemy >=1.4.41",
    "sqlmodel >=0.0.8",
    "aiohttp >=3.8.6",
    "aiofiles >=25.1.0",
    "aiogram >=2.25.1",
    "msgspec",
    "celery >=5.6.2",
]
